deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: benchmark-ui
  labels:
    app.kubernetes.io/name: benchmark-ui
spec:
  selector:
    app.kubernetes.io/name: benchmark-ui
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
